# mmap-fifo

./: Cargo.toml  README.md
benches/: fifo_bench.rs
src/: lib.rs
tests/: fifo_tests.rs
